--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Todo-list React.js study app</title>
 </head>
 <body>
-<div id="app"></div>
+<div class="app-container">
+    <h1>My Cool Todo-React.js App!</h1>
+    <div id="app"></div>
+</div>
 
 
 </body>
